hook up _parent target in window.open. it wasn't. bug 168807 code=keeda@hotpop.com r=jkeiser,jst,me